<resources>
    <string name="app_name">BuckTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bucks">Bucks</string>
    <string name="stands">Stands</string>
    <string name="chat">Chat</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out">Sign out</string>
    <string name="verify_email">Verify Email</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="email_password">Email - Password</string>
    <string name="firebase_lockup">Firebase Lockup</string>
    <string name="enter_username_password">Enter Username/Password</string>
    <string name="enter_login">Enter Login</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_message">Write a message…</string>
    <string name="enter_username">Enter Username desired (if Registering)</string>
    <string name="shooter_buck">Shooter Buck </string>
    <string name="enter_buck_name">Buck Name</string>
    <string name="is_he_a_shooter">Is he a shooter?</string>
    <string name="date_seen">Date Seen</string>
    <string name="hint_resource">Select Stand</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="save">Save</string>
    <string name="image">Image</string>
    <string name="message">Message</string>
    <string name="buck_name">Buck Name</string>
    <string name="is_shooter">Is Shooter?</string>
    <string name="last_seen">Last seen:</string>
    <string name="shooter">Shooter</string>
    <string name="_0_0_0000">0/0/0000</string>
    <string name="stand_name">Ranch Name</string>
    <string name="sightings">Sightings</string>
    <string name="seen">Seen: </string>
    <string name="stand_seen_at">Stand seen at</string>
    <string name="select_location">Select Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_ranch">New Ranch</string>
    <string name="add_ranch">Add Ranch</string>


</resources>
